After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 760988 - Fix a crash when drawing without group and levels
Fix a crash when drawing without group and levels
Status: RESOLVED FIXED
Product: libgnomekbd
Classification: Core
Component: Drawing
unspecified
Other All
: Normal normal
: ---
Assigned To: libgnomekbd maintainers
Sergey V. Udaltsov
Depends on:
Blocks:
 
 
Reported: 2016-01-22 14:48 UTC by Antonio Ospite
Modified: 2016-01-22 16:01 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix a crash and allow to draw the widget without key labels. (1.68 KB, patch)
2016-01-22 14:48 UTC, Antonio Ospite
committed Details | Review
minimal test program in python (297 bytes, text/x-python)
2016-01-22 14:51 UTC, Antonio Ospite
  Details

Description Antonio Ospite 2016-01-22 14:48:35 UTC
Created attachment 319554 [details] [review]
Fix a crash and allow to draw the widget without key labels.

Fix a crash in draw_key_label() when trying to draw the widget without having set groups or levels.

Allowing to draw the widget without key labels still makes some sense when testing keyboard geometries.
Comment 1 Antonio Ospite 2016-01-22 14:51:27 UTC
Created attachment 319555 [details]
minimal test program in python

I am attaching a minimal test program in python to show the crash.
The same program does not crash anymore after the patch and shows a keyboard without key labels.