libgnomekbd/gkbd-keyboard-drawing.c: fix a segfault

When drawing the keyboard without having set the groups and levels there
is a segmentation fault:

  Program received signal SIGSEGV, Segmentation fault.
  0x00007fffe49ae8c9 in draw_key_label (is_pressed=<optimized out>, xkb_height=<optimized out>, xkb_width=<optimized out>, xkb_origin_y=<optimized out>,
      xkb_origin_x=<optimized out>, angle=0, keycode=<optimized out>, drawing=0xa540e0, context=0xca6080) at gkbd-keyboard-drawing.c:1017
  1017                    if (drawing->groupLevels[glp] == NULL)

Fix that.

The widget now is able to draw a keyboard without the keys labels, which
can be useful when testing just the keyboard geometry.

https://bugzilla.gnome.org/show_bug.cgi?id=760988